unpackaged/objects/Mesa__c.object
<CustomObject>
    <fields>
        <fullName>Big_blind__c</fullName>
        <label>Big Blind</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataFechamento__c</fullName>
        <label>Data Fechamento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Jogo__c</fullName>
        <label>Jogo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mix Texas/Omaha</fullName>
                </value>
                <value>
                    <fullName>Omaha</fullName>
                </value>
                <value>
                    <fullName>Texas Holdem</fullName>
                    <default>true</default>
                    <label>Texas Holdem</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Observacoes__c</fullName>
        <label>Observações</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SessaoCaixa__c</fullName>
        <label>Sessão Caixa</label>
        <referenceTo>SessaoCaixa__c</referenceTo>
        <relationshipLabel>Mesas</relationshipLabel>
        <relationshipName>Mesas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Small_blind__c</fullName>
        <label>Small Blind</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aberta</fullName>
                    <default>true</default>
                    <label>Aberta</label>
                </value>
                <value>
                    <fullName>Fechada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Titulo__c</fullName>
        <defaultValue>&quot;Nova Mesa&quot;</defaultValue>
        <description>Titulo pelo o qual a mesa é reconhecida por todos</description>
        <label>Titulo</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TotalFichasCapile__c</fullName>
        <label>Total Fichas Capilé (+)</label>
        <summarizedField>DealerMesa__c.ValorCapile__c</summarizedField>
        <summaryForeignKey>DealerMesa__c.Mesa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFichasCompradas__c</fullName>
        <label>Total Fichas Compradas (-)</label>
        <summarizedField>CompraFicha__c.Fichas__c</summarizedField>
        <summaryForeignKey>CompraFicha__c.Mesa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalVagas__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Total Vagas</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValorFrente__c</fullName>
        <label>Valor da Frente</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValorRake__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Valor Rake (+)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValorTotalVenda__c</fullName>
        <label>ValorTotalVenda</label>
        <summarizedField>CompraFicha__c.Valor_Total__c</summarizedField>
        <summaryForeignKey>CompraFicha__c.Mesa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Mesa</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Titulo__c</columns>
        <columns>Status__c</columns>
        <columns>SessaoCaixa__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>DataFechamento__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>Faturadas_EsteMes</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Titulo__c</columns>
        <columns>Jogo__c</columns>
        <columns>TotalFichasCompradas__c</columns>
        <columns>TotalFichasCapile__c</columns>
        <columns>ValorRake__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Fechada</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Faturadas - Este Mês</label>
    </listViews>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mesas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>